@@ -1,3 +1,8 @@
+2012-05-17  Bengt Martensson  <Bengt.Martensson@bigfoot.com>
+
+	* src/org/harctoolbox/IrMaster/GuiMain.java: Improved CCF window
+	popup menu. Cleanup. Cleaner exit values.
+
 2012-05-11  Bengt Martensson  <Bengt.Martensson@bigfoot.com>
 
 	* src/org/harctoolbox/IrMaster/GuiMain.java: implemented wave
